* Fixed issue #115; Unable to delete install manifests. * Fixed a problem where all cgi-invoked scripts were stuck at log level 3. * Bumped the release version to v2.0 rc12.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/an.conf
+++ b/AN/an.conf
@@ -73,14 +73,9 @@ dir::bin_paths			=	/usr/local/sbin,/usr/local/bin,/usr/sbin,/usr/bin,/sbin,/bin
 
 # This sets the logging level. The valid values are:
 # 0 = No logging at all.
-# 1 = Only critical events are logged.
-# 2 = (Default) Informative events are logged.
-# 3 = First debug log level. This will generate a lot of output. Most notably,
-#     this log level will record all database queries and replies.
-# 4 = This should only be used when you are tracing a specific bug. It will
-#     generate a tremendous amount of data. For this reason, be sure that your
-#     log::cycle_size is set to '0' or to a sufficiently high level to prevent
-#     frequent log cycling.
-#log::level			=	2
-log::level			=	3
-
+# 1 = (Default) Only critical events are logged.
+# 2 = Log level used by developers working on particular sections of code.
+# 3 = All debug output
+# 4 = Log level 3 + password logging.
+#log::level			=	1
+log::level			=	1
