* Removed all of the .pod files except for Alert.pod... Bad documentation is worse than no documentation. * Changed all references to alteeve.ca to alteeve.com. * Removed more unused templates and strings.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/AN/an.conf
+++ b/AN/an.conf
@@ -16,15 +16,15 @@
 #   system's directory delimiter on demand. If you use your OS delimiter, it  #
 #   will work fine but your program will be less portable. For example, these #
 #   two values are equal on POSIX operating systems:                          #
-#   - /var/www/alteeve.ca    # Not portable, works on POSIX OS' only.         #
-#   - ::var::www::alteeve.ca # Will port to any supported OS but is more      #
+#   - /var/www/alteeve.com    # Not portable, works on POSIX OS' only.        #
+#   - ::var::www::alteeve.com # Will port to any supported OS but is more     #
 #                            # tedious to type.                               #
 ###############################################################################
 
 # This should be the root directory of your program. This must be a fully
 # defined directory so please set a leading directory delimiter. Please always
 # use a trailing directory delimiter!
-#dir::install			=	::var::www::alteeve.ca::
+#dir::install			=	::var::www::alteeve.com::
 dir::install			=	::usr::lib64::perl5::AN::
 
 # This is the directory on disk where your program's executables are. Please
