--- a/striker.conf
+++ b/striker.conf
@@ -398,13 +398,13 @@ scancore::archive::division		=	60000
 # You can globally disable this feature with:
 #striker::peers::configure_anvils = 0
 # 
-#scancore::db::1::host			=	an-striker01.alteeve.ca
+#scancore::db::1::host			=	an-striker01.alteeve.com
 #scancore::db::1::port			=	5432
 #scancore::db::1::name			=	scancore
 #scancore::db::1::user			=	admin
 #scancore::db::1::password		=	Initial1
 #
-#scancore::db::2::host			=	an-striker02.alteeve.ca
+#scancore::db::2::host			=	an-striker02.alteeve.com
 #scancore::db::2::port			=	5432
 #scancore::db::2::name			=	scancore
 #scancore::db::2::user			=	admin
@@ -843,9 +843,9 @@ scancore::dashboard::dlm_hung_timeout	=	300
 # 
 # Once you can read the status, remove the '-o status' and use the rest of the
 # command as the value for this variable. Here is an example for the Striker
-# dashboard called 'an-striker01.alteeve.ca':
+# dashboard called 'an-striker01.alteeve.com':
 # 
-#scan-ipmitool::machine::an-striker01.alteeve.ca::power_check_command	=	fence_ipmilan -a an-striker01.ipmi -l admin -p Initial1
+#scan-ipmitool::machine::an-striker01.alteeve.com::power_check_command	=	fence_ipmilan -a an-striker01.ipmi -l admin -p Initial1
 
 
 ###############################################################################
