* Fixed two strings that were missing their closing '</key>' elements. * Fixed a pile of spelling mistakes.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -682,7 +682,7 @@ scancore::dashboard::dlm_hung_timeout	=	300
 # it will look at the number of sensors that have gone above their high 
 # critical threshold, or below their low critical threshold, and add up their
 # weights. If the total value is equal to or greater than this shutdown limit,
-# ScanCore will initiate a withdrawl and power down of the node.
+# ScanCore will initiate a withdrawal and power down of the node.
 #scancore::temperature::shutdown_limit	=	5
 
 # When a node goes into thermal shutdown, many of its temperature (and other)
