--- a/striker.conf
+++ b/striker.conf
@@ -8,6 +8,26 @@
 #                                                                             #
 ###############################################################################
 
+# Normally, Striker dashboards don't send alerts. If you want to send alerts, 
+# you can do so by "piggy-backing" on an existing mail server. Enter the domain
+# name set in 'Outgoing Mail Server' in the 'Mail Servers' section.
+# This is messy for legacy reasons, but will be made a lot cleaner in v3. Sorry
+# about that...
+#striker::email::use_server		=	mail.example.com
+
+# To choose who gets alerts, and what level to use, you can enter the email
+# address set as the 'Target' in one or more notification targets. To specify
+# the level of alerts to receive, suffix the email address with 
+# '<email>:<level>'. If no level is specified, 'warning' is used. The valid
+# level strings are 'debug', 'info', 'notice', 'warning' and 'critical'. 
+# Multiple recipients can be specified by separating them with commas.
+#striker::email::notify			=	test@example.com:warning,debug@example.com:notice
+
+# By default, a server rebooting is treated as a notice-level alert. If you 
+# want to make reboots or restarts a warning level alert, set this to '1'.
+#scancore::servers::reboots_are_warning	=	0
+
+
 ### Common - These values apply to all utilities.
 
 # If you create a custom skin, uncomment this and change the value to the name
@@ -409,26 +429,6 @@ scancore::archive::division		=	60000
 #scancore::db::2::name			=	scancore
 #scancore::db::2::user			=	admin
 #scancore::db::2::password		=	Initial1
-
-
-# Normally, Striker doesn't send alerts. If you want to send alerts, you can do
-# so by "piggy-backing" on an existing mail server. Enter the domain name set
-# in 'Outgoing Mail Server' in the 'Mail Servers' section.
-# This is messy for legacy reasons, but will be made a lot cleaner in v3. Sorry
-# about that...
-#striker::email::use_server		=	mail.example.com
-
-# To choose who gets alerts, and what level to use, you can enter the email
-# address set as the 'Target' in one or more notification targets. To specify
-# the level of alerts to receive, suffix the email address with 
-# '<email>:<level>'. If no level is specified, 'warning' is used. The valid
-# level strings are 'debug', 'info', 'notice', 'warning' and 'critical'. 
-# Multiple recipients can be specified by separating them with commas.
-#striker::email::notify			=	test@example.com:warning,debug@example.com:notice
-
-# By default, a server rebooting is treated as a notice-level alert. If you 
-# want to make reboots or restarts a warning level alert, set this to '1'.
-#scancore::servers::reboots_are_warning	=	0
 
 # ScanCore can trigger a shutdown of a node for two reasons; Overheating and
 # insufficient remaining runtime in batteries. The former protects your nodes
