* Added a ping to a ScanCore database server before trying to connect to reduce slow-down caused by the loss of a ScanCore database host. This ping check can be disabled with the new 'scancore::db::<id>::ping_before_connect' on a per-DB basis. * Added zero-padding to CPU cores so that the list of cores in the select box sorts properly when editing a server's configuration in Striker. This closes issue #123. * Created the new ScanCore->insert_or_update_health() method that makes it cleaner to set/clear health scores. * Updated scan-bond to set a value of '1' for each failed link. This clears when the interface returns to a 'going back' or 'up' state. * Updated scan-clustat to use warning level alerts for changes in node membership. * Fixed a minor bug in anvil-cli-state where the warning about high load would be displayed on single-shot runs. * Fixed the RC version in anvil-generate-iso.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -402,6 +402,12 @@ scancore::archive::division		=	60000
 # ScanCore database password
 #scancore::db::X::password
 #
+# By default, Striker will try to ping the DB host before trying to connect to
+# the database. If the target is unavailable, this will speed up connections in
+# a degraded state. If, however, the given database host can not be pinged 
+# directly, set this to '0' and ping checks will be skipped.
+#scancore::db::X::ping_before_connect	=	0
+#
 # While we wait for the Spice HTML5 client to mature, Striker will 
 # automatically setup passwordless SSH from the admin user of Striker 
 # dashboards to Anvil! nodes. These peers are generally the same as the 
@@ -423,12 +429,14 @@ scancore::archive::division		=	60000
 #scancore::db::1::name			=	scancore
 #scancore::db::1::user			=	admin
 #scancore::db::1::password		=	Initial1
+#scancore::db::1::ping_before_connect	=	1
 #
 #scancore::db::2::host			=	an-striker02.alteeve.com
 #scancore::db::2::port			=	5432
 #scancore::db::2::name			=	scancore
 #scancore::db::2::user			=	admin
 #scancore::db::2::password		=	Initial1
+#scancore::db::2::ping_before_connect	=	1
 
 # ScanCore can trigger a shutdown of a node for two reasons; Overheating and
 # insufficient remaining runtime in batteries. The former protects your nodes
