* Fixed a bug(?) where, if a node was rebuilt and then later used to upload a file to the media library, it would fail because of the old SSH fingerprint not matching the new one. Now, we remove the offending key so that it starts working again on subsequent uploads. The is a questionable approach for security reasons and may be changed in a future release. For now, the logic is that the BCN is what dashboard -> node comms happen on and it is supposed to be secured and isolated. * Changed the default drbd c-plan-ahead to '1' and the default max-buffers to 8k on the advice of LINBIT staff to make DRBD 8.4 adjust the resync rate according to load better.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -1151,6 +1151,10 @@ remote-usb::enable_remote_usb_mount	=	0
 #sys::install_manifest::default::anvil_drbd_net_sndbuf-size	=	10M
 #sys::install_manifest::default::anvil_drbd_net_rcvbuf-size	=	10M
 
+# This allows for faster and more dynamic resync rate adjustment
+sys::install_manifest::default::anvil_drbd_disk_c-plan-ahead	=	1
+sys::install_manifest::default::anvil_drbd_net_max-buffers	=	8192
+
 ### Foundation pack - Set the host names and IP addresses of the various 
 ###                   foundation pack devices.
 # Ethernet switches. If you are using stacked switches, the host name and IP 
