* Fixed a bug in Get->server_host() where it would error out trying to check what servers were running on the peer whem the peer was offline. * Fixed a bug in ScanCore where the '-v...' switches were not being honoured properly. * Updated ScanCore's thermal "cool down" timers to count both thermal shutdowns and load sheds in the previous six hours. * Fixed a bug where, if the peer was offline and the local node was in thermal warning, it would try to load shed. * Upped the verbosity of logging in ScanCore's 'avoid_duplicate_run' function after a (so far unreproducable) bug where two copies of ScanCore managed to run at the same time. * Updated scan-apc-ups's warning when communication is lost to a UPS and kick-apc-ups is in use to warn of the potential hard shut down.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -161,6 +161,8 @@ tools::anvil-kick-apc-ups::enabled	=	0
 #
 # If the timer runs out and the UPS shuts down, this controls how long the UPS
 # "sleeps" for before turning back on. The default is '300' (5 minutes).
+# NOTE: Values under 300 seem to cause display issues on some SMT1500-modeul 
+#       UPSes.
 #sys::apc::ups::sleep_time		=	300
 #
 # The kick script is started once a minute. If you want to reduce the frequency
