* Decided that it was safer to *not* archive old database records by default, given the low value of the data compared to the risk of filling up a dashboard's drive. So this commit adds a new option 'scancore::archive::save_to_disk' (default = 0) that is set to '1' to record data.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -365,13 +365,19 @@ scancore::update_age_limit		=	1200
 # hostory schema at this count, and then any record equal to or older than the
 # time stamp is removed.
 # 
-# To protect against large memory use or long archive times in the case where 
-# the number of records to archive are particularly large, the 'division' value
-# is used to break up the archive job into "chunks". Generally speaking, the 
-# division should be greater than the count, and never be needed. However, if
-# the archive process takes too long, or if the archive was triggered well 
-# above the trigger value, the division can help prevent using too much memory 
-# at once. If division is set to '0', archive jobs will never be divided.
+# To protect against the potential of using too much disk space, archives are
+# off by default. Under normal behaviour, old records are simple removed. To
+# enable the archive function, set this to '1'.
+#scancore::archive::save_to_disk	=	1
+# 
+# When archiving to disk is enabled, to protect against large memory use or 
+# long archive times in the case where the number of records to archive are 
+# particularly large, the 'division' value is used to break up the archive job
+# into "chunks". Generally speaking, the division should be greater than the 
+# count, and never be needed. However, if the archive process takes too long, 
+# or if the archive was triggered well above the trigger value, the division 
+# can help prevent using too much memory at once. If division is set to '0', 
+# archive jobs will never be divided.
 # 
 # The archives are all stored in the specified 
 # directory using the name format '<agent>.<table>.<timestamp>.bz2' and the
