* Added support for the Alteeve-variant APC fence agent. * Moved the fence_raritan_snmp agent into the Striker repo.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -1174,8 +1174,9 @@ sys::install_manifest::default::anvil_drbd_net_max-buffers	=	8192
 
 # This sets the switched PDU information. The 'pduX_agent' controls which fence
 # agent the Anvil! will use to communicate with it. Supported options are:
-# APC brand     - fence_apc_snmp
-# Raritan brand - fence_raritan_snmp
+# APC brand             - fence_apc_snmp
+# APC (Alteeve variant) - fence_apc_alteeve
+# Raritan brand         - fence_raritan_snmp
 # The Anvil! supports either 2 or 4 PDU configurations. If all equipment will
 # be in the same rack, you can skip pdu3 and pdu4. If you are building a 
 # dual-rack setup with a pair of PDUs per rack, then set 'pdu_count' to '4'
@@ -1195,8 +1196,9 @@ sys::install_manifest::default::anvil_drbd_net_max-buffers	=	8192
 #sys::install_manifest::default::pdu4_agent			=	
 
 # This controls the default PDU fence agent to use. The default is 
-# 'fence_apc_snmp' which supports APC-brand PDUs. If you use Raritan brand 
-# though, you may wish to set this to 'fence_raritan_snmp'.
+# 'fence_apc_snmp' which supports APC-brand PDUs.If you have an APC PDU that
+# fails to change state, try the 'fence_apc_alteeve' agent. If you use Raritan
+# brand though, you may wish to set this to 'fence_raritan_snmp'.
 #sys::install_manifest::pdu_agent				=	fence_apc_snmp
 
 # This configures the UPSes.
