* Updated Install Manifest to allow the user to specify if Lanplus is needed for IPMI access, and to set a non-standard IPMI user name to use. * Silenced a bunch of logging. * Bumped the internal version to v2.0.4.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -1219,8 +1219,18 @@ sys::install_manifest::default::anvil_drbd_net_max-buffers	=	8192
 # nodes 1 and 2. Of most important note are the pdu outlet definitions. 
 # Generally, these options should not be set so that the web interface is
 # allowed to create sensible defaults.
+# NOTE: If you are using nodes with an IPMI user that isn't 'admin', set the
+#       'nodeX_ipmi_user' to the appropriate user name. If you need to use 
+#       lanplus (as is the case on HP-based nodes), enable 'nodeX_ipmi_lanplus'
+#       by setting it to '1'. By default, when lanplus is used, the 'privlvl'
+#       will be set to 'user'. When lanplus is not used, it is ignored. For 
+#       more information on this, see 'man fence_ipmilan' or review:
+#       - https://access.redhat.com/solutions/72703
 # Node 1
 #sys::install_manifest::default::node1_name			=	
+#sys::install_manifest::default::node1_ipmi_user		=	admin
+#sys::install_manifest::default::node1_ipmi_lanplus		=	0
+#sys::install_manifest::default::node1_ipmi_privlvl		=	USER
 #sys::install_manifest::default::node1_bcn_ip			=	
 #sys::install_manifest::default::node1_ipmi_ip			=	
 #sys::install_manifest::default::node1_sn_ip			=	
@@ -1232,6 +1242,9 @@ sys::install_manifest::default::anvil_drbd_net_max-buffers	=	8192
 
 # Node 2
 #sys::install_manifest::default::node2_name			=	
+#sys::install_manifest::default::node2_ipmi_user		=	admin
+#sys::install_manifest::default::node2_ipmi_lanplus		=	0
+#sys::install_manifest::default::node2_ipmi_privlvl		=	USER
 #sys::install_manifest::default::node2_bcn_ip			=	
 #sys::install_manifest::default::node2_ipmi_ip			=	
 #sys::install_manifest::default::node2_sn_ip			=	
@@ -1273,7 +1286,9 @@ sys::install_manifest::default::anvil_drbd_net_max-buffers	=	8192
 # Nodes 
 #sys::install_manifest::show::nodes_name_field			=	1
 #sys::install_manifest::show::nodes_bcn_field			=	1
-#sys::install_manifest::show::nodes_ipmi_field			=	1
+#sys::install_manifest::show::nodes_ipmi_ip_field		=	1
+#sys::install_manifest::show::nodes_ipmi_user_field		=	1
+#sys::install_manifest::show::nodes_ipmi_lanplus_field		=	1
 #sys::install_manifest::show::nodes_sn_field			=	1
 #sys::install_manifest::show::nodes_ifn_field			=	1
 #sys::install_manifest::show::nodes_pdu_fields			=	1
