* Fixed a bug in scan-hpacucli where the updating of the diagnostics run didn't include a timestamp, causing those historical records to not get resynced. Also fixed some alert string issues. * Added support for 'scan-hpacucli::ignore_maximum_temperature' which, when set, ignores the reported maximum temperature for drives. Also updated the default striker.conf to add the scan-hpacucli agent details. * Updated ScanCore->translate_sensor_name() to better handled undefined variables.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -608,6 +608,15 @@ scancore::dashboard::dlm_hung_timeout	=	300
 #scan-storcli::log_db_transactions	=	0
 #scan-storcli::disable			=	0
 
+### See HPACUCLI notes below!
+# HP RAID controller scan agent:
+#scan-hpacucli::log_file		=	/var/log/ScanCore.log
+#scan-hpacucli::log_level		=	2
+#scan-hpacucli::log_language		=	en_CA
+#scan-hpacucli::language		=	en_CA
+#scan-hpacucli::log_db_transactions	=	0
+#scan-hpacucli::disable			=	0
+
 # RHEL's Resource Group manager's 'clustat' scan agent:
 #scan-clustat::log_file			=	/var/log/ScanCore.log
 #scan-clustat::log_level		=	2
@@ -640,6 +649,30 @@ scancore::dashboard::dlm_hung_timeout	=	300
 #scan-server::log_db_transactions	=	0
 #scan-server::disable			=	0
 
+
+# HPACUCLI Notes;
+# 
+# 1. The 'HP Array Configuration Utility CLI' (hpacucli) can not be shipped 
+#    with or automatically installed by the Anvil! system. You must download 
+#    the hpacucli RPM manually and install it on each HP Proliant-based node.
+#    At the time of writing, this is the most recent version;
+#    - https://support.hpe.com/hpsc/swd/public/detail?swItemId=MTX_d6ebba0f5cd642edace4648b9a
+#    
+# 2. The HP controllers will report each drive's maximum temperature. This is 
+#    usually 40°C, close to the nominal operating temperature in many 
+#    environments. If you find that the drives are repeatedly in a warning or
+#    critical temperature state, you can set the below variable to '1' and the
+#    reported maximum temperature will be ignored. 
+#scan-hpacucli::ignore_maximum_temperature	=	0
+#
+#    This will set the thresholds to the following (in °C, uncomment to 
+#    change):
+#scan-hpacucli::thresholds::drives::high_warning	=	50
+#scan-hpacucli::thresholds::drives::high_critical	=	55
+#scan-hpacucli::thresholds::drives::low_warning		=	5
+#scan-hpacucli::thresholds::drives::low_critical	=	0
+#scan-hpacucli::thresholds::drives::jump		=	3
+#scan-hpacucli::thresholds::drives::buffer		=	2
 
 ###############################
 # Power Shutdown Variables    #
