* Added 'scancore::agent_timeout' which puts a time limit on how long an agent can run for before it is terminated. * Fixed a bug in scan-ipmitool where sensors without data would be added to the database. Also added logic to delete duplicate entries in ipmitool_value when 2+ results are returned.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -331,6 +331,15 @@ scancore::enabled			=	1
 # the value is expressed in bytes.
 #scancore::maximum_ram			=	1073741824
 
+# To help protect against a scan agent hanging, we give each agent a maximum
+# amount of run time before we consider it hung and terminate it. By default,
+# this is 300 seconds (5 minutes). Generally you do not want to go less than
+# this because, after prolonged outages of a dashboard, the resync time could
+# take a while to run. If you find that agents are being terminated too often
+# when they were not actually hung, increase this. Be aware that you will want
+# to keep this below 'scancore::update_age_limit;.
+#scancore::agent_timeout		=	300
+
 # ScanCore will periodically get started by cron (default is once per minute).
 # When it starts, it checks to see if another copy is already running. If not,
 # it starts. If so, it looks to see how long ago the running copy completed a
