* Fixed a bug in scan-hpacucli where a RAID 10's output caused it to think there was a phantom drive in the array. I also cleaned up how it looks for pre-scanned arrays and logical disks and turned some logging down to level 2. Also fixed some SQL query typos. * Fixed a minor parsing bug in scan-ipmitool. * Cleaned and reorganized the scan agent sample configs in striker.conf.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -585,37 +585,54 @@ scancore::dashboard::dlm_hung_timeout	=	300
 # scan agent 'scan-ipmitool', you can use:
 # 
 #scan-ipmitool::log_file		=	/var/log/ScanCore.log
-#scan-ipmitool::log_level		=	1
+#scan-ipmitool::log_level		=	2
 #scan-ipmitool::log_language		=	en_CA
 #scan-ipmitool::language		=	en_CA
 #scan-ipmitool::log_db_transactions	=	1
-#scan-ipmitool::disable			=	0
+#scan-ipmitool::disable			=	1
 # 
 # NOTE: The language you choose MUST exist in the XML "strings" files!
 # 
 
 # ScanCore itself:
 #scancore::log_file			=	/var/log/ScanCore.log
-#scancore::log_level			=	1
+#scancore::log_level			=	2
 #scancore::log_language			=	en_CA
 #scancore::language			=	en_CA
-#scancore::log_db_transactions		=	0
+#scancore::log_db_transactions		=	1
 
-# IPMI scan agent:
-#scan-ipmitool::log_file		=	/var/log/ScanCore.log
-#scan-ipmitool::log_level		=	2
-#scan-ipmitool::log_language		=	en_CA
-#scan-ipmitool::language		=	en_CA
-#scan-ipmitool::log_db_transactions	=	0
-#scan-ipmitool::disable			=	0
 
-# LSI/Avago RAID controller scan agent:
-#scan-storcli::log_file			=	/var/log/ScanCore.log
-#scan-storcli::log_level		=	2
-#scan-storcli::log_language		=	en_CA
-#scan-storcli::language			=	en_CA
-#scan-storcli::log_db_transactions	=	0
-#scan-storcli::disable			=	0
+# APC/Schneider brand SNMP switched PDU scan agent:
+#scan-apc-pdu::log_file			=	/var/log/ScanCore.log
+#scan-apc-pdu::log_level		=	2
+#scan-apc-pdu::log_language		=	en_CA
+#scan-apc-pdu::language			=	en_CA
+#scan-apc-pdu::log_db_transactions	=	1
+#scan-apc-pdu::disable			=	1
+
+# APC/Schneider brand SNMP UPS scan agent:
+#scan-apc-ups::log_file			=	/var/log/ScanCore.log
+#scan-apc-ups::log_level		=	2
+#scan-apc-ups::log_language		=	en_CA
+#scan-apc-ups::language			=	en_CA
+#scan-apc-ups::log_db_transactions	=	1
+#scan-apc-ups::disable			=	1
+
+# Linux bond driver scan agent:
+#scan-bond::log_file			=	/var/log/ScanCore.log
+#scan-bond::log_level			=	2
+#scan-bond::log_language		=	en_CA
+#scan-bond::language			=	en_CA
+#scan-bond::log_db_transactions		=	1
+#scan-bond::disable			=	1
+
+# RHEL's Resource Group manager's 'clustat' scan agent:
+#scan-clustat::log_file			=	/var/log/ScanCore.log
+#scan-clustat::log_level		=	2
+#scan-clustat::log_language		=	en_CA
+#scan-clustat::language			=	en_CA
+#scan-clustat::log_db_transactions	=	1
+#scan-clustat::disable			=	1
 
 ### See HPACUCLI notes below!
 # HP RAID controller scan agent:
@@ -623,40 +640,32 @@ scancore::dashboard::dlm_hung_timeout	=	300
 #scan-hpacucli::log_level		=	2
 #scan-hpacucli::log_language		=	en_CA
 #scan-hpacucli::language		=	en_CA
-#scan-hpacucli::log_db_transactions	=	0
-#scan-hpacucli::disable			=	0
+#scan-hpacucli::log_db_transactions	=	1
+#scan-hpacucli::disable			=	1
 
-# RHEL's Resource Group manager's 'clustat' scan agent:
-#scan-clustat::log_file			=	/var/log/ScanCore.log
-#scan-clustat::log_level		=	2
-#scan-clustat::log_language		=	en_CA
-#scan-clustat::language			=	en_CA
-#scan-clustat::log_db_transactions	=	0
-#scan-clustat::disable			=	0
-
-# Linux bond driver scan agent:
-#scan-bond::log_file			=	/var/log/ScanCore.log
-#scan-bond::log_level			=	2
-#scan-bond::log_language		=	en_CA
-#scan-bond::language			=	en_CA
-#scan-bond::log_db_transactions		=	0
-#scan-bond::disable			=	0
-
-# APC/Schneider brand SNMP UPS scan agent:
-#scan-apc-ups::log_file			=	/var/log/ScanCore.log
-#scan-apc-ups::log_level		=	2
-#scan-apc-ups::log_language		=	en_CA
-#scan-apc-ups::language			=	en_CA
-#scan-apc-ups::log_db_transactions	=	0
-#scan-apc-ups::disable			=	0
+# IPMI scan agent:
+#scan-ipmitool::log_file		=	/var/log/ScanCore.log
+#scan-ipmitool::log_level		=	2
+#scan-ipmitool::log_language		=	en_CA
+#scan-ipmitool::language		=	en_CA
+#scan-ipmitool::log_db_transactions	=	1
+#scan-ipmitool::disable			=	1
 
 # KVM/QEMU virtual machine scan agent:
 #scan-server::log_file			=	/var/log/ScanCore.log
 #scan-server::log_level			=	2
 #scan-server::log_language		=	en_CA
 #scan-server::language			=	en_CA
-#scan-server::log_db_transactions	=	0
-#scan-server::disable			=	0
+#scan-server::log_db_transactions	=	1
+#scan-server::disable			=	1
+
+# LSI/Avago RAID controller scan agent:
+#scan-storcli::log_file			=	/var/log/ScanCore.log
+#scan-storcli::log_level		=	2
+#scan-storcli::log_language		=	en_CA
+#scan-storcli::language			=	en_CA
+#scan-storcli::log_db_transactions	=	1
+#scan-storcli::disable			=	1
 
 
 # HPACUCLI Notes;
