* Added EFI partition to continue adding support for UEFI.
Signed-off-by: Madison Kelly <mkelly@alteeve.ca>

--- a/ISO/CentOS/6/Anvil/EFI/BOOT/BOOTX64.conf
+++ b/ISO/CentOS/6/Anvil/EFI/BOOT/BOOTX64.conf
@@ -5,32 +5,18 @@ splashimage (nd)/pxe_voyager1.xpm.gz
 title Boot the next device as configured in your BIOS
 	exit
 
-# Install Node 01 via net
-title New Anvil! Node 1 - CentOS v6.10 - PXE - Deletes All Existing Data!
-	root (nd)
-	macappend
-	kernel /vmlinuz ip=dhcp ks=http://10.20.4.1/centos6/x86_64/ks/pxe-new-node01.ks ksdevice=bootif
-	initrd /initrd.img
-
-# Install Node 02 via net
-title New Anvil! Node 2 - CentOS v6.10 - PXE - Deletes All Existing Data!
-	root (nd)
-	macappend
-	kernel /vmlinuz ip=dhcp ks=http://10.20.4.1/centos6/x86_64/ks/pxe-new-node02.ks ksdevice=bootif
-	initrd /initrd.img
-
-# Install Striker 1 via net
-title New Striker Dashboard 01 - CentOS v6.10 - Network Installation - Deletes All Existing Data!
+# Install Striker 1
+title New Striker Dashboard 01 - CentOS v6.10 -  Deletes All Existing Data!
         root (nd)
 	macappend
-        kernel /vmlinuz ip=dhcp ks=http://10.20.4.1/centos6/x86_64/ks/pxe-new-striker01.ks ksdevice=bootif 
+        kernel /vmlinuz ks=cdrom:ks/pxe-new-striker01.ks
         initrd /initrd.img
 
-# Install Striker 2 via net
+# Install Striker 2
 title New Striker Dashboard 02 - CentOS v6.10 - Network Installation - Deletes All Existing Data!
 	root (nd)
 	macappend
-	kernel /vmlinuz ip=dhcp ks=http://10.20.4.1/centos6/x86_64/ks/pxe-new-striker02.ks ksdevice=bootif
+        kernel /vmlinuz ks=cdrom:ks/pxe-new-striker02.ks
 	initrd /initrd.img
 
 # Rescue Installed System
